--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,10 @@
     font-style: normal;
 }
 
+* {
+    margin: 0;
+}
+
 /* margiin share  */
 .margin-fixed {
     margin: 50px 140px 120px 140px;
@@ -239,4 +243,52 @@
     padding-right: 22px;
     padding-bottom: 22px;
 }
+
 /* Our Awesome Portfolio section start */
+
+/* subscribe section start */
+#user-email {
+    margin-top: 20px;
+    border: none;
+    padding: 15px;
+    padding-left: 25px;
+    font-size: 18px;
+    font-weight: 300;
+    border-radius: 50px 0 0 50px;
+
+}
+
+#user-btn {
+    border: none;
+    padding: 15px;
+    font-size: 18px;
+    font-weight: 300;
+    color: white;
+    background-color: #FF0000;
+    border-radius: 0px 50px 50px 0px;
+    cursor: pointer;
+}
+
+/* footer start */
+footer {
+    background-color: #070211;
+    color: white;
+
+}
+
+.footer-title {
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    padding: 80px 0px 80px 0px;
+    margin: 0px 140px 0px 140px;
+}
+
+hr {
+    margin: 20px 140px 20px 140px;
+    border-color: #FFFFFF;
+}
+
+.social-icons a {
+    padding: 15px;
+}
